# modes-sensing

./: .coverage  .coverage.tanzania.3547677.XiElOEZx  .coverage.tanzania.3547678.XiqYvQHx  .coverage.tanzania.3547679.XvqQOcEx  .coverage.tanzania.3547680.XfYDZtVx  .gitignore  .gitlab-ci.yml  .ruff.toml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  config.example.yaml  config.schema  index.html  memo  memo.txt  package-lock.json  profile_output.prof  pyproject.toml  run.lgo  webui_log.txt
.github/workflows/: test.yaml
.gitlab/: ci-local.yml
doc/: architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: DateSelector.tsx  Footer.tsx  GraphDisplay.module.css  GraphDisplay.tsx  ReceiverStatus.tsx
frontend/src/hooks/: useGraphJobs.ts  usePermalink.ts  useUrlParams.ts
frontend/src/types/: api.ts  index.ts
frontend/src/utils/: date.ts  dateRange.ts
frontend/tests/evidence/: index.htm
kubernetes/: sensor-modes.yaml
lib/local_lib/: captcha.py  openpyxl_util.py  selenium_util.py
lib/modes/: database.py  receiver.py
react/: index.html  package-lock.json  package.json  vite.config.ts
react/src/: App.tsx  index.css  vite-env.d.ts
react/src/components/: DateSelector.tsx  Footer.tsx  GraphDisplay.module.css  GraphDisplay.tsx  Modal.tsx  ReceiverStatus.tsx
react/src/hooks/: useGraphJobs.ts  useUrlParams.ts
react/src/types/: index.ts
react/tests/evidence/: index.htm
schema/: postgres.schema  sqlite.schema
scripts/: capture_modes.py  capture_vdl2.py  measure_graph_times.py  measurement_results.json  migrate_timestamptz_and_aggregates.sql
src/: collect.py  collect_combined.py  collect_vdl2.py  healthz.py  webui.py
src/amdar/: __init__.py  __main__.py  cli_collect.py  cli_healthz.py  cli_webui.py  config.py  constants.py
src/amdar/cli/: __init__.py  collect.py  healthz.py  webui.py
src/amdar/core/: __init__.py  geo.py  physics.py  types.py
src/amdar/database/: __init__.py  postgresql.py  sqlite.py
src/amdar/sources/: __init__.py  aggregator.py  outlier.py
src/amdar/sources/modes/: __init__.py  receiver.py
src/amdar/sources/vdl2/: __init__.py  parser.py  receiver.py
src/amdar/viewer/: __init__.py
src/amdar/viewer/api/: __init__.py  cache_pregeneration.py  data_routes.py  graph.py  graph_routes.py  job_manager.py  materialized_view_refresh.py  progress_estimation.py
src/amdar/viewer/graph/: __init__.py  cache.py  definitions.py  pool.py  progress.py  range.py  service.py  worker.py
src/amdar/viewer/graph/plotting/: __init__.py  axes.py  colorbar.py  contour.py  data_prep.py  density.py  figure.py  scatter.py  styles.py  temperature.py  vertical_profile.py  wind.py
src/modes/: config.py  database_postgresql.py  database_sqlite.py  receiver.py
src/modes-sensing/: graph.py
src/modes/webui/api/: cache_pregeneration.py  graph.py  job_manager.py  progress_estimation.py
src/modes/webui/webapi/: graph.py
src/vdl2/: __init__.py  parser.py  receiver.py
tests/: conftest.py  test_basic.py  test_playwright.py
tests/e2e/: __init__.py  conftest.py  test_url_params.py  test_webui.py
tests/fixtures/: analyze_comparison.py  collect_adsb_data.py  collect_vdl2_data.py  collect_weather_comparison.py  weather_comparison.csv
tests/integration/: __init__.py  test_api_schema.py  test_collect.py  test_database.py  test_graph_generation.py  test_receiver.py  test_receiver_with_fixture.py
tests/unit/: __init__.py  test_aggregator.py  test_amdar_types.py  test_api_schema_consistency.py  test_cache_pregeneration.py  test_database_postgresql.py  test_graph.py  test_graph_cache.py  test_graph_definitions.py  test_graph_range.py  test_graph_routes_api.py  test_healthz.py  test_job_manager.py  test_last_received.py  test_outlier.py  test_physics.py  test_progress_estimation.py  test_receive_lines.py  test_receiver_integration.py  test_receiver_quality.py  test_store_queue_pending.py  test_temperature_binning.py  test_types.py  test_vdl2_parser.py  test_webui.py
